--- a/src/components/shared/HeroSection.astro
+++ b/src/components/shared/HeroSection.astro
@@ -62,8 +62,8 @@ const t = useTranslations(lang);
     </div>
     <div class="bg-muted lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2 flex items-center justify-center">
       <img
-        src="/images/home-page/Cuarto Limpio ISO 14644.JPG"
-        alt="Cuarto limpio ISO 14644 Star Filters"
+        src="/images/home-page/Cuarto Limpio Sala Blanca ISO 14644.JPG"
+        alt="Cuarto limpio sala blanca ISO 14644 Star Filters"
         class="hero-image aspect-3/2 object-cover lg:aspect-auto lg:h-full lg:w-full"
       />
     </div>
