Hacer que imágenes de Cuartos limpios y Accesorios ocupen todo el alto disponible
- Cambiar altura fija h-64/72/80 a h-full
- Agregar flex flex-col a contenedores para mejor distribución
- Agregar flex-1 flex items-center a contenedores de imagen
- Las imágenes ahora ocupan todo el espacio vertical disponible en sus tarjetas

--- a/src/components/shared/BentoGrid.astro
+++ b/src/components/shared/BentoGrid.astro
@@ -36,13 +36,13 @@ const t = useTranslations(lang);
             </p>
           </div>
           <div
-            class="@container relative w-full grow max-lg:mx-auto max-lg:max-w-sm"
+            class="@container relative w-full grow max-lg:mx-auto max-lg:max-w-sm flex flex-col"
           >
-            <div class="px-6 pt-4 pb-6 sm:px-8 sm:pt-4 sm:pb-8">
+            <div class="px-6 pt-4 pb-6 sm:px-8 sm:pt-4 sm:pb-8 flex-1 flex items-center">
               <img
                 src="/images/home-page/Cuarto Limpio Sala Blanca.png"
                 alt="Cuarto limpio sala blanca ISO 14644 Star Filters"
-                class="w-full h-64 sm:h-72 lg:h-80 rounded-lg object-cover shadow-sm"
+                class="w-full h-full rounded-lg object-cover shadow-sm"
               />
             </div>
           </div>
@@ -140,12 +140,12 @@ const t = useTranslations(lang);
               {t('features.support.description')}
             </p>
           </div>
-          <div class="relative w-full grow">
-            <div class="px-6 pt-4 pb-6 sm:px-8 sm:pt-4 sm:pb-8">
+          <div class="relative w-full grow flex flex-col">
+            <div class="px-6 pt-4 pb-6 sm:px-8 sm:pt-4 sm:pb-8 flex-1 flex items-center">
               <img
                 src="/images/home-page/Filtros%20de%20estrella%20productos.png"
                 alt="Productos Star Filters para cuartos limpios"
-                class="w-full h-64 sm:h-72 lg:h-80 rounded-lg object-cover shadow-sm"
+                class="w-full h-full rounded-lg object-cover shadow-sm"
               />
             </div>
           </div>
